# holoview

./: .gitignore  Cargo.toml  Makefile
crates/hypc/: Cargo.toml  readme.md
crates/hypc/src/: lib.rs
crates/obj2hypc/: Cargo.toml  hypc  hypc.txt
crates/obj2hypc/src/: main.rs
hypc/: Tile-58-50-1-1.hypc  Tile-58-52-1-1.hypc
obj2hypc/: Cargo.toml  hypc
obj2hypc/src/: main.rs
shaders/: crt.wgsl  edl.wgsl  hypc_points.wgsl  rgbshift.wgsl  sem_post.wgsl
src/: app.rs  camera.rs  ground_grid.rs  holographic_shaders.rs  lib.rs  main.rs  point_cloud.rs  post.rs  ui.rs
src/data/: mod.rs  point_cloud.rs  tile_aligner.rs  types.rs
src/math/: grid.rs  mod.rs  robust.rs
src/renderer/: context.rs  mod.rs  semantics.rs  targets.rs
src/renderer/pipelines/: base.rs  ground_grid.rs  hologram.rs  mod.rs  post_stack.rs  postprocess.rs
