[package]
name = "obj2hypc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytemuck = { version = "1.23", features = ["derive"] }
byteorder = "1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
hashbrown = "0.15.5"
log = "0.4"
miniz_oxide = "0.8.9"
nohash-hasher = "0.2"
once_cell = "1.21.3"
osmpbf = "0.3.6"
rayon = "1.11.0"
regex = "1.11.1"
rstar = "0.12.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1.15.1"
walkdir = "2.5.0"
zip = { version = "4.5", default-features = false, features = ["deflate"] }
